--- a/design/index.html
+++ b/design/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/design/styles.css" />
+    
     <title>frontend mentor challenge</title>
   </head>
   <body>
       <div class="card-box">
         <div class="card-top">
+          <img src="/images/icon-view.svg" alt="eye" class="eye_img">
+          <div class="hover-back"></div>
           <img src="/images/image-equilibrium.jpg" alt="eth equilibrium" class="image_eth">
-    
           <h2>Equilibrium #3429</h2>
         </div>
 
